# presentations

./: BIO.md  LICENSE  Liquidate-your-assets.POPL20.key  Liquidate-your-assets.key  TODO.md  gradual-liquid-types.key  gradual-refinement-types.md  keynote.key  mid-tenure.key  plmw.key
LiquidHaskell/type-level/: Notes.md  talk.key
NJPLS/: gradual-liquid-types.key
OOPSLA/: gradual-liquid-types.key  gradual-liquid-types.v4.key
PLEX/: PLEX.key
POPL19/: SRC'19.key
TYPES23/: TYPES23.key
WG28-2021/: WG2.8-21.key
a-tale/: a-tale.key  presentation.md  theorem-proving-for-all.key
anosy/: Anosy.key
gradual-pi/: gradual-liquid-types-tocut.key  gradual-liquid-types.key
mid-tenure/: Deep.Solved.hs  Light.Solved.hs  Light.hs  cbcast-lh.cabal  refinements.cabal
plmw19/: talk.key
pls19/: Logic.hs  LogicSolutions.hs  talk.key
popl18/: lighting.key  plmw18.key  reflection.key
type-for-dummies/: notes.md
type-theory-in-15-min/: type-theory-in-15min.key
