cabal-version: 2.4

name:           refinements
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      Light, Deep  
  build-depends:
       liquidhaskell                     >= 0.8.10 && < 0.9
     , liquid-containers                 >= 0.6.2 && < 0.7
     , liquid-base
     , liquid-prelude
     , rest-rewrite
     , hashable
  default-language: Haskell2010
  ghc-options: -fplugin=LiquidHaskell